Forward port Samsung STK support (frameworks/base)
[pawitp: port to Lollipop]

Change-Id: I08d169bc466df290fca838b09f6b0fbea2ac82a8
Signed-off-by: martinusbe <martinusbe@gmail.com>

Conflicts:
	core/res/res/values/symbols.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2466,9 +2466,12 @@
     <bool name="config_enableKeypressOptimization">false</bool>
     <integer-array name="keypress_param_value"/>
 
+    <!-- Boolean to enable stk functionality on Samsung phones -->
+    <bool name="config_samsung_stk">false</bool>
 
-		    <!-- Our Extras Begin -->
-
+    <!-- The list of components which should be automatically disabled. -->
+    <string-array name="config_disabledComponents" translatable="false">
+    </string-array>
 
     <!-- Whether doze should invert colors for notifications. If the RRO theme causes
     the NORMAL notification background to be dark and the text to be light, this boolean
