Allow prevention of doze notification color inversion Doze 2.1
for Layers
Removed slims files for aosp roms -- Bgill55

adapted for Marshmallow

Change-Id: I55ff4f2d9c41b38d5e410ba4b1d7632bd23509b6

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2423,4 +2423,11 @@
   <!-- keypress optimization -->
   <java-symbol type="bool" name="config_enableKeypressOptimization" />
   <java-symbol type="array" name="keypress_param_value" />
+
+
+		<! -- Our Extras Begin -->
+
+
+  <!-- Doze invert -->
+  <java-symbol type="bool" name="config_invert_colors_on_doze" />
 </resources>
