--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2433,4 +2433,13 @@
      <!-- Keypress Optimization -->
     <bool name="config_enableKeypressOptimization">false</bool>
     <integer-array name="keypress_param_value"/>
+
+
+		    <!-- Our Extras Begin -->
+
+
+    <!-- Whether doze should invert colors for notifications. If the RRO theme causes
+    the NORMAL notification background to be dark and the text to be light, this boolean
+    needs to be set to false, to prevent the doze notifications from being light -->
+    <bool name="config_invert_colors_on_doze">true</bool>    
 </resources>
